# kishirisu

./: README.md  main.py  pyproject.toml
stereo_vision/: __init__.py  capture.py  config.py  depth.py  detection.py  mock_camera.py  real_camera.py  tracking.py
tests/: __init__.py  test_config.py  test_depth.py  test_detection.py  test_mock_camera.py  test_real_camera.py  test_tracking.py
