[project]
name = "kishirisu"
version = "1.0.0"
description = "Stereo vision depth estimation for ball catcher robot"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Deniz" }]
keywords = ["stereo-vision", "depth-estimation", "robotics", "opencv"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "opencv-python>=4.8.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = ["mypy", "ruff", "pytest"]

[project.scripts]
kishirisu = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stereo_vision"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
